fix: Changed the order of the blocks on tablets and phones

--- a/src/components/Aside/style.module.scss
+++ b/src/components/Aside/style.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
 
   @media screen and (max-width: 900px) {
+    margin-bottom: 34px;
     max-width: none;
     max-height: 1000px;
     background-color: var(--color-purple);
@@ -32,7 +33,7 @@
   padding: 12px 25px 13px;
   color: var(--color-white);
 
-  @media screen and (min-width: 900px) {
+  @media screen and (min-width: 901px) {
     @include visually-hidden;
   }
 
