--- a/src/components/Main/style.module.scss
+++ b/src/components/Main/style.module.scss
@@ -6,7 +6,7 @@
 
   @media screen and (max-width: 900px) {
     flex-direction: column;
-    row-gap: 38px;
+    row-gap: 10px;
   }
 }
 
@@ -16,6 +16,7 @@
 
   @media screen and (max-width: 900px) {
     max-width: none;
+    display: contents;
   }
 }
 
