--- a/src/components/SortingControl/style.module.scss
+++ b/src/components/SortingControl/style.module.scss
@@ -4,6 +4,11 @@
   border: 1px solid var(--color-purple);
   border-radius: var(--border-radius);
   overflow: hidden;
+
+  @media screen and (max-width: 900px) {
+    order: -1;
+    margin-bottom: 0;
+  }
 }
 
 .button {
